# embedding_server

./: .gitignore  Cargo.toml
bruno/: config.bru
bruno/task/: show.bru
docs/: ToDo.md
src/: main.rs
src/cmd/: rootcmd.rs
src/commons/: fileutiles.rs  mod.rs
src/configure/: config_global.rs  config_http.rs  config_model.rs  config_qdrant.rs  config_rocksdb.rs  mod.rs
src/embedding/: answer.rs  mod.rs  model_tokenizer.rs  retriever.rs
src/httpserver/: mod.rs
src/httpserver/handlers/: handler_embedding.rs  mod.rs
src/httpserver/module/: mod.rs  module_retriever.rs  module_task.rs  request_module.rs
src/httpserver/routers/: root.rs
src/resources/: init_resources.rs  mod.rs  resource_qdrant.rs  resource_rocksdb.rs
