[package]
name = "embedding_server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
clap = "4.5.7"
log = "0.4.17"
log4rs = "1.2.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.87"
serde_yaml = "0.9.14"
lazy_static = "1.4.0"
tokio = { version = "1.21.2", features = ["full"] }
anyhow = "1.0.66"
# ToDo 将 fork 替换为 daemonize
fork = "0.2.0"
rand = "0.8.5"
walkdir = "2.5.0"
rayon = "1.10.0"
sysinfo = "0.31.2"
axum = { version = "0.7.5", features = ["default", "json"] }
tower-http = { version = "0.5.2", features = [
    "trace",
    "compression-full",
    "auth",
    "fs",
] }
tower = { version = "0.4.13", features = ["timeout"] }
strum = "0.26.2"
strum_macros = "0.26.4"
once_cell = "1.16.0"
http-body = "^1"
hyper = "1.3.1"
regex = "1.6.0"
num_cpus = "1.14.0"
signal-hook = { version = "0.3.14", features = ["default", "extended-siginfo"] }
notify = "6.1.1"

# ML
candle-core = { git = "https://github.com/huggingface/candle.git", features = [
    "cuda",
] }
candle-nn = { git = "https://github.com/huggingface/candle.git", features = [
    "cuda",
] }
candle-transformers = { git = "https://github.com/huggingface/candle.git" }
tokenizers = "0.19.1"
tracing-chrome = "0.7.2"
hf-hub = { version = "0.3.2", features = ["tokio"] }

# sudo apt update && sudo apt upgrade
# sudo apt install clang
# sudo apt install llvm
# rocksdb = { version = "0.22.0", feature = "multi-threaded-cf" }
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
qdrant-client = "1.10.3"

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[[example]]
name = "load_json"
path = "examples/load_json.rs"


[[example]]
name = "qdrant"
path = "examples/qdrant_sample.rs"
